schema/testdata/validation_relationships_mixed_unmatched_one_to_one/schema.keel
model Author {
    fields {
        written Post[]
        reviewed Post
        starPost Post @unique
    }
}

model Post {
    fields {
        author Author
        reviewedBy Author[]
    }
}
